# pcm-optimization-tool

./: .gitignore  .gitmodules  CMakeLists.txt  Qcprop.py  README.md  demo.py  pywrap.cpp  qiskitTest.py
benchmark-results/: queries.sh
include/: ActivationState.hpp  CircuitOptimization.hpp  CompoundGateInliner.hpp  ConstantPropagation.hpp  Definitions.hpp  Definitions_qcprop.hpp  MatrixGenerator.hpp  QuantumComputation.hpp  QubitState.hpp  UnionTable.hpp
include/operations/: ClassicControlledOperation.hpp  CompoundOperation.hpp  Control.hpp  OpType.hpp  Operation.hpp  SymbolicOperation.hpp
include/parser/: Parser.hpp  Scanner.hpp  Token.hpp
include/util/: BitSet.hpp  Complex.hpp  ProbGatesUtil.hpp
src/: CMakeLists.txt  CircuitOptimizer.cpp  CompoundGateInliner.cpp  ConstantPropagation.cpp  MatrixGenerator.cpp  QuantumComputation.cpp  QubitState.cpp  UnionTable.cpp  main.cpp
src/circuit/: CMakeLists.txt  Circuit.cpp  Circuit.hpp
src/operations/: NonUnitaryOperation.cpp  Operation.cpp  StandardOperation.cpp  SymbolicOperation.cpp
src/parser/: CMakeLists.txt  Expression.cpp  GRCSParser.cpp  Parser.cpp  Parser.hpp  QASMParser.cpp  QCParser.cpp  QasmParser.cpp  QasmParser.hpp  RealParser.cpp  Scanner.cpp  TFCParser.cpp
src/util/: BitSet.cpp  Complex.cpp  generate_rotation.py
test/: Benchmark.cpp  BitSetTest.cpp  ComplexTest.cpp  CompoundOperationsTest.cpp  ConstantPropagationTest.cpp  OperationTest.cpp  QubitStateTest.cpp  TestUtils.cpp  TestUtils.hpp  UnionTableTest.cpp  generate_rotation.py  mmr.ipynb  mmr.py
test/circuits/: circ1.qasm  circ1_out.qasm  circ2.qasm  circ22_OUT.qasm  circ23_OUT.qasm  circ2_OUT.qasm  downloadMQTBench.sh
